# my_wm

./: CMakeLists.txt  README.md  wm.cpp
include/: config.hpp  logger.hpp  managed_windows.hpp  window_manager.hpp  x11_utils.hpp
src/: logger.cpp  main.cpp  managed_windows.cpp  window_manager.cpp
